# ThroughMomentum

./: CMakeLists.txt  README.md  naos.json
controller/: Cartfile  Podfile
controller/Controller/: AppDelegate.swift  CircleView.swift  DataViewController.swift  DetailViewController.swift  Info.plist  MainViewController.swift  ModelController.swift  RootViewController.swift  TestViewController.swift
controller/Controller.xcodeproj/: project.pbxproj
controller/Controller/Assets.xcassets/AppIcon.appiconset/: Contents.json
controller/Controller/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
controller/Controller/Settings.bundle/: Root.plist
ctrl/: ctrl.pde
display/: display.pde
firmware/: CMakeLists.txt  README.md  naos.json
firmware/src/: dist.c  dist.h  dst.c  dst.h  enc.c  enc.h  end.c  end.h  led.c  led.h  main.c  mot.c  mot.h  pir.c  pir.h
interface/: .gitignore  Podfile
interface/Interface/: AppDelegate.swift  Info.plist  ViewController.swift
interface/Interface.xcodeproj/: project.pbxproj
interface/Interface.xcworkspace/: contents.xcworkspacedata
interface/Interface/Assets.xcassets/App Icon.appiconset/: Contents.json
interface/Interface/Assets.xcassets/Splash Image.imageset/: Contents.json
interface/Interface/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
interface/Interface/Settings.bundle/: Root.plist
laser/: motor_halterung.ai  motor_platte.ai  technik_oben.ai  technik_unten.ai
pcb/: drill.gcode  etch.gcode  prototype.brd  prototype.sch
src/: audio.c  audio.h  dist.c  dist.h  enc.c  led.c  led.h  main.c  mic.c  mic.h  mot.c  mot.h  pir.c  pir.h  pulse_in.c  pulse_in.h  pulse_out.c  pulse_out.h  smooth.c  smooth.h
supply/: CMakeLists.txt
supply/src/: led.c  led.h  main.c  rls.c  rls.h
